# caide-cpp-inliner

./: .cirrus.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  LICENSE.txt  README.md  appveyor.yml
.github/workflows/: email.yaml
ci/: appveyor-build.ps1  appveyor-test.ps1  ci-functions.sh  cirrus-script.sh  gitlab-script.sh
ci/cmake/3.8/: ClangTargets-relwithdebinfo.cmake  LLVMConfigVersion.cmake  LLVMExports-relwithdebinfo.cmake  LLVMExports.cmake
ci/cmake/3.9/: ClangConfig.cmake  LLVMConfig.cmake  LLVMExports.cmake
ci/cmake/4.0/: ClangConfig.cmake  LLVMConfig.cmake  LLVMExports.cmake
doc/: known-issues.md
doc/demo/: ascii_graphics.cpp  ascii_graphics.h  cmdparse.h  main.cpp
src/: CMakeLists.txt  DependenciesCollector.cpp  DependenciesCollector.h  IntervalSet.h  MergeNamespacesVisitor.cpp  MergeNamespacesVisitor.h  OptimizerVisitor.cpp  OptimizerVisitor.h  RemoveInactivePreprocessorBlocks.cpp  RemoveInactivePreprocessorBlocks.h  SmartRewriter.cpp  SmartRewriter.h  SourceInfo.cpp  SourceInfo.h  SourceLocationComparers.cpp  SourceLocationComparers.h  Timer.cpp  Timer.h  UsedDeclarations.cpp  UsedDeclarations.h  caideInliner.cpp  caideInliner.h  caideInliner.hpp  caide_debug.h  clang_compat.cpp  clang_compat.h  clang_version.h  cmd.cpp  configure.sh  detect_options.cpp  detect_options.h  inliner.cpp  inliner.h  optimizer.cpp  optimizer.h  save.txt  sema_utils.cpp  sema_utils.h  util.cpp  util.h
src/cmd/: CMakeLists.txt  cmd.cpp
src/test-tool/: CMakeLists.txt  test-tool.cpp
tests/: run-tests.sh
tests/cases/actually-written-type/: 1.cpp  etalon.cpp
tests/cases/alias-in-template-argument/: etalon.cpp
tests/cases/base-class-of-template/: 1.cpp  etalon.cpp
tests/cases/base-initializers/: etalon.cpp
tests/cases/caide-concept-comment/: 1.cpp  etalon.cpp
tests/cases/concepts-constraints/: 1.cpp  clangOptions.txt  etalon.cpp
tests/cases/enums/: 1.cpp  etalon.cpp
tests/cases/friends/: 1.cpp  etalon.cpp
tests/cases/github-issue17/: etalon.cpp
tests/cases/github-issue4/: etalon.cpp
tests/cases/github-issue8/: 1.cpp  etalon.cpp
tests/cases/ident-to-keep/: 1.cpp  etalon.cpp  identifiersToKeep.txt
tests/cases/include-option-std/: 1.cpp  clangOptions.txt
tests/cases/include-option-std/mystd/: mystd.h
tests/cases/include-option-user/: 1.cpp  clangOptions.txt  etalon.cpp  user_header.h
tests/cases/inheriting-ctor/: etalon.cpp
tests/cases/inliner1/: macrosToKeep.txt
tests/cases/inliner2/: clangOptions.txt  etalon.cpp
tests/cases/inliner3/: 2.cpp  etalon.cpp
tests/cases/line-directives/: 1.cpp
tests/cases/macros/: 1.cpp  etalon.cpp  macrosToKeep.txt
tests/cases/merge-namespaces/: 1.cpp  clangOptions.txt  etalon.cpp
tests/cases/merge-namespaces-2/: 1.cpp
tests/cases/pull-headers-up/: 1.cpp  clangOptions.txt  etalon.cpp
tests/cases/pull-headers-up/mystd/: mymap.h  myvector.h
tests/cases/qualifiers/: 1.cpp  etalon.cpp
tests/cases/references-from-template-arguments/: 1.cpp
tests/cases/remove-comments/: 1.cpp  etalon.cpp
tests/cases/remove-namespaces/: 1.cpp  etalon.cpp
tests/cases/remove-template-functions/: 1.cpp  etalon.cpp
tests/cases/remove-type-alias/: 1.cpp  clangOptions.txt
tests/cases/sizeof/: 1.cpp  etalon.cpp
tests/cases/source-ranges/: 1.cpp
tests/cases/static-assert/: 1.cpp  etalon.cpp
tests/cases/std-namespace/: 1.cpp  etalon.cpp
tests/cases/stl/: 1.cpp  clangOptions.txt  etalon.cpp
tests/cases/template-alias/: 1.cpp
tests/cases/template-friend/: etalon.cpp
tests/cases/template-variables/: 1.cpp  etalon.cpp
tests/cases/templated-context/: 1.cpp  etalon.cpp
tests/cases/track-parent-decls/: 1.cpp
tests/cases/ull/: 1.cpp
tests/cases/unused-fields/: 1.cpp  etalon.cpp
tests/cases/using-declarations/: 1.cpp  etalon.cpp
tests/temp/: keepme.txt
travis/: build-and-test.sh
travis/cmake/3.6/share/llvm/: LLVMConfig.cmake
travis/cmake/3.8/: ClangConfig.cmake  ClangTargets.cmake  LLVMConfig.cmake
travis/cmake/3.8/share/llvm/: LLVMConfig.cmake  LLVMExports-relwithdebinfo.cmake  LLVMExports.cmake
travis/cmake/3.9/: ClangTargets-relwithdebinfo.cmake  ClangTargets.cmake  LLVMExports-relwithdebinfo.cmake
travis/cmake/4.0/: ClangTargets-relwithdebinfo.cmake  ClangTargets.cmake  LLVMConfigVersion.cmake  LLVMExports-relwithdebinfo.cmake
